--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Environment variables stub file. Fill in variables with desired values and rename to .env.
 DISCORD_API_TOKEN = ''
-USERS_PATH = '/CallumBot/users'
-LOG_PATH = '/CallumBot/logs'
+USERS_PATH = '/LobbyBot/users'
+LOG_PATH = '/LobbyBot/logs'
