disown ssh to end github action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,11 @@ jobs:
         echo "${SSH_PRIVATE_KEY}" > private_key.pem
         chmod 600 private_key.pem
         ssh -i private_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "bash -s" << 'EOF'
+          cd ~/CallumBot
+          git pull
           cd ~
           ./stop.sh
-          ./start.sh
+          ./start.sh > start.log 2>&1 &
+          disown
         EOF
       shell: bash
