--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
           git pull
           cd ~
           ./stop.sh
-          ./start.sh
+          ./start.sh &
+          disown
         EOF
       shell: bash
