add back bump/show commands, fix bugs

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Environment variables stub file. Fill in variables with desired values and rename to .env.
 DISCORD_API_TOKEN = ''
+TENOR_API_KEY = ''
 USERS_PATH = '/LobbyBot/users'
 LOG_PATH = '/LobbyBot/logs'
 BUMP_LOBBY_CHANNEL_ID = ''
